Discord-style status indicators on avatars, fix .env Tenor refs, sync website
- Add: Status indicator dots overlaid on user avatars (green=online, yellow=away, red=dnd, grey=offline/invisible) with dark border cutout, responsive sizing for mobile
- Fix: .env.example still referenced Tenor API  updated to GIPHY with correct URL
- Fix: CSS comment 'Tenor key'  'GIPHY key'
- Sync: website/index.html replaced with canonical docs/index.html
- Add: Help & Support footer link to docs/index.html
- Add: Deploy checklist note in CHANGELOG.md

--- a/.env.example
+++ b/.env.example
@@ -22,5 +22,5 @@ ADMIN_USERNAME=admin
 # Optional: Override the data directory location
 # HAVEN_DATA_DIR=
 
-# Optional: Tenor GIF API key (free — get one at https://developers.google.com/tenor/guides/quickstart)
-# TENOR_API_KEY=
+# Optional: GIPHY API key (free — get one at https://developers.giphy.com/dashboard/)
+# GIPHY_API_KEY=
